# python-cloud-core

./: .repo-metadata.json  CHANGELOG.md  CONTRIBUTING.rst  README.rst  noxfile.py  owlbot.py  pyproject.toml  pytest.ini  setup.py  synth.metadata  synth.py
.github/: .OwlBot.lock.yaml  sync-repo-settings.yaml
.github/workflows/: mypy.yml  unittest.yml  unittest_lint.yml
.kokoro/: publish-docs.sh  release.sh
.kokoro/docker/docs/: requirements.txt
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/release/: common.cfg
.librarian/: state.yaml
docs/: conf.py
google/cloud/: _helpers.py  _http.py  _testing.py  client.py  py.typed  version.py
google/cloud/_helpers/: __init__.py
google/cloud/_http/: __init__.py
google/cloud/client/: __init__.py
google/cloud/obsolete/: __init__.py
testing/: constraints-3.6.txt  constraints-3.7.txt
tests/unit/: test__helpers.py  test__http.py  test_client.py
